; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/q3map/extr_surface.c_AllocDrawSurf.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/q3map/extr_surface.c_AllocDrawSurf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@numMapDrawSurfs = common dso_local global i64 0, align 8
@MAX_MAP_DRAW_SURFS = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [19 x i8] c"MAX_MAP_DRAW_SURFS\00", align 1
@mapDrawSurfs = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @AllocDrawSurf() #0 {
  %1 = alloca i32*, align 8
  %2 = load i64, i64* @numMapDrawSurfs, align 8
  %3 = load i64, i64* @MAX_MAP_DRAW_SURFS, align 8
  %4 = icmp uge i64 %2, %3
  br i1 %4, label %5, label %7

5:                                                ; preds = %0
  %6 = call i32 @Error(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  br label %7

7:                                                ; preds = %5, %0
  %8 = load i32*, i32** @mapDrawSurfs, align 8
  %9 = load i64, i64* @numMapDrawSurfs, align 8
  %10 = getelementptr inbounds i32, i32* %8, i64 %9
  store i32* %10, i32** %1, align 8
  %11 = load i64, i64* @numMapDrawSurfs, align 8
  %12 = add i64 %11, 1
  store i64 %12, i64* @numMapDrawSurfs, align 8
  %13 = load i32*, i32** %1, align 8
  ret i32* %13
}

declare dso_local i32 @Error(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
